@@ -16,6 +16,7 @@ AC_MSG_RESULT([
 DM_LOGDIR:     $DM_LOGDIR
 DM_CONFDIR:    $DM_CONFDIR
 DM_STATEDIR:   $DM_STATEDIR
+USE_DM_GETOPT: $USE_DM_GETOPT
 GLIB:          $ac_glib_libs
 GMIME:         $ac_gmime_libs
 MYSQL:         $MYSQLLIB
